Project3/css/styles.css
@charset "utf-8";

html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, ol, ul, li, form, table, caption, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline; 
	}

body {
    font-family: Verdana, Arial, Helvetica, sans-serif;
}

h1 {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 40px;
    font-weight: 200;
    text-align: left;
    margin-bottom: 5px;
}

h2 {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 24px;
    font-weight: 200;
    text-align: left;
    margin-bottom: 5px;
}

h3 {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    text-align: left;
    font-weight: bold;
    margin-bottom: 5px;
}

h4 {
    font-size: 12px;
    text-align: left;
    font-weight: bold;
    margin-bottom: 5px;
    margin-top: 5px;
}

p {
    font-size: 12px;
    text-align: left;
    margin-bottom: 10px;
}

#mainMapTitle {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 20px;
	font-weight: 200;
    text-align: left;
    vertical-align: middle;
}

#pageWrapper {
    position: relative;
	margin-left: auto;
	margin-right: auto;
	margin-top: 0px;
	margin-bottom: 0px;
}

#headDiv {
    position: absolute;
	top: 5px;
	left: 10px;
}

#mainMap {
    position: absolute;
	top: 60px;
	left: 10px;
	width: 618px;
	height: 400px;
    background-color: rgba(128, 128, 128 ,0.2);
}

#mainScatterplotMap {
    position: absolute;
	top: 480px;
	left: 10px;
	width: 618px;
	height: 400px;
    background-color: rgba(128, 128, 128 ,0.2);
}

#miniMapWrapper {
    position: absolute;
    top: 60px;
    left: 643px;
    width: 250px;
    height: 400px;
    background-color: rgba(128, 128, 128 ,0.2);
    overflow:auto;
}

#miniScatterplotMapWrapper {
    position: absolute;
    top: 480px;
    left: 643px;
    width: 250px;
    height: 400px;
    background-color: rgba(128, 128, 128 ,0.2);
    overflow: auto;
}

#miniMap {
    position: relative;
    width: 100%;
}

#miniScatterplotMap {
    position: relative;
    width: 100%;
    overflow: auto;
}

.miniMapDiv {
    position: relative;
}

#controlsWrapper {
    position: absolute;
    top: 60px;
    left: 907px;
    width: 280px;
}

#controlsScatterplotWrapper {
    position: absolute;
    top: 480px;
    left: 907px;
    width: 280px;
}

#mapSelector {
    position: relative;
    width: 100%;
    padding: 10px;
    display: block;
    margin-bottom: 5px;
}

#mapControls, #mapControlsForScatterplot {
    position: relative;
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    display: none;
}

#scatterMapControls {
    position: relative;
    width: 100%;
    display: none;
}

#mapVariablesSelector, #mapVariablesSelectorForScatterplot {
    position: relative;
    width: 100%;
    display: none;
}

#mainMapDetails {
    position: relative;
    width: 100%;
    padding: 10px;
    margin-bottom: 5px;
    font-size: 100%;
    display: none;
}
	
#container {
    display: block;
    float: left;
    position: relative;
    right: 50%;
}

#mainMapColumn {
    float: right;
    width: 170px;
}

#mainMapLegend {
    position: relative;
    width: 100%;
    padding: 10px;
    display: block;
    margin-bottom: 5px;
    font-size:75%;
}

#mainScatterplotMapLegend {
    position: relative;
    width: 100%;
    padding: 10px;
    display: block;
    margin-bottom: 10px;
    font-size:75%;
}

#mainMapSVG {
    font-size: 10px;
}

#toolbar {
    position: relative;
    width: 100%;
    padding: 5px 10px 5px 10px;
    display: block;
    margin-bottom: 5px;
}

#animationPausedMsg {
    position: absolute;
	top: 480px;
	left: 10px;
    font-size: 300%;
}

.sliderDiv {
    width: 130px;
}

#scatterAnimation {
    position: absolute;
    top: 190px;
    left: 148px;
}

.guide-btn {
    margin: 2px;
}

.axisTitle {
    font-size: 12px;
}

.miniMapTitle {
    /*margin-left: 80px;*/
    position: relative;
    text-align: center;
    font-size:100%;
    font-weight: bold;
}

.animationTitle {
    font-size:120%;
    font-weight: bold;
}

.docHTML {
    position: absolute;
    top: 0px;
    left: 0px;
    display: none;
}

.popupDialogCls {
    font-size:80%;
    overflow:auto;
}

.projectDescMapTitle {
    text-align: center;
    font-weight: bold;
    font-variant: small-caps;
}

.roundedFrame {
    background-color: rgba(200,200,255,0.5);
    display: block;
    position: absolute;
    font-size: 10px;
    padding: 5px 5px;
    border-style: none;
	border-width: thin;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright:5px;
    -moz-border-radius-bottomleft:5px;
    -moz-border-radius-bottomright:5px;
    -webkit-border-top-left-radius:5px;
    -webkit-border-top-right-radius:5px;
    -webkit-border-bottom-left-radius:5px;
    -webkit-border-bottom-right-radius:5px;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
    border-bottom-left-radius:5px;
    border-bottom-right-radius:5px;
}


.tooltip{
    background-color:#fafad2;
    position:absolute;
    font-family:Arial, Helvetica, sans-serif;
    font-size:12px;
    padding:5px 10px;
    border-style:none;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright:5px;
    -moz-border-radius-bottomleft:5px;
    -moz-border-radius-bottomright:5px;
    -webkit-border-top-left-radius:5px;
    -webkit-border-top-right-radius:5px;
    -webkit-border-bottom-left-radius:5px;
    -webkit-border-bottom-right-radius:5px;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
    border-bottom-left-radius:5px;
    border-bottom-right-radius:5px;
    -moz-box-shadow: 2px 2px 4px rgba(96,96,96,0.6);
    -webkit-box-shadow: 2px 2px 4px  rgba(96,96,96,0.6);
    box-shadow: 2px 2px 4px  rgba(96,96,96,0.6);
}

.counties {
    fill: #9C9292;
}

.countiesNoData {
    fill: #000000;
}

.states_and_counties {
    fill: none;
    stroke: #FFFFFF;
    stroke-linejoin: round;
}

.states {
    fill: none;
    stroke: #000000;
    stroke-linejoin: round;
    stroke-width:1px;
}

.statesSelected {
    fill: orange;
}

.countySelected {
    fill: orange;
}

.slice text {
    font-size: 8pt;
}

.q0-counties { fill: #FFFFD9; }
.q1-counties { fill: #EDF8B1; }
.q2-counties { fill: #C7E9B4; }
.q3-counties { fill: #7FCDBB; }
.q4-counties { fill: #41B6C4; }
.q5-counties { fill: #1D91C0; }
.q6-counties { fill: #225EA8; }
.q7-counties { fill: #0C2C84; }

.q0-states { fill: #FFF7F3; }
.q1-states { fill: #FDE0DD; }
.q2-states { fill: #FCC5C0; }
.q3-states { fill: #FA9FB5; }
.q4-states { fill: #F768A1; }
.q5-states { fill: #DD3497; }
.q6-states { fill: #AE017E; }
.q7-states { fill: #7A0177; }

.counties0 { background-color: #FFFFD9; }
.counties1 { background-color: #EDF8B1; }
.counties2 { background-color: #C7E9B4; }
.counties3 { background-color: #7FCDBB; }
.counties4 { background-color: #41B6C4; }
.counties5 { background-color: #1D91C0; }
.counties6 { background-color: #225EA8; }
.counties7 { background-color: #0C2C84; }
.countiesNA { background-color: #000000; }

.states0 { background-color: #FFF7F3; }
.states1 { background-color: #FDE0DD; }
.states2 { background-color: #FCC5C0; }
.states3 { background-color: #FA9FB5; }
.states4 { background-color: #F768A1; }
.states5 { background-color: #DD3497; }
.states6 { background-color: #AE017E; }
.states7 { background-color: #7A0177; }

.animationHP0 { background-color: #CA0020; }
.animationHP1 { background-color: #F4A582; }
.animationHP2 { background-color: #92C5DE; }
.animationHP3 { background-color: #0571B0; }

.animationSFC0 { background-color: #CA0020; }
.animationSFC1 { background-color: #0571B0; }

.line {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
}

circle {
    fill-opacity: .3;
    fill: #1B9E77;
}

circle.brushed {
    fill-opacity: .8;
    fill: #D95F02;
}


.extent {
    fill: #000;
    fill-opacity: .075;
    stroke: #fff;
}

.domain {
    stroke: #999;
    stroke-weight: 1;
    fill: #eee;
}

